wip 1.21 vs 1.22 to verify version stuff